"backend throws and fontend auth"